# tree-sitter-bencode

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-bencode.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bencode/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterbencode/: bencode.h
bindings/swift/TreeSitterbencodeTests/: TreeSitterbencodeTests.swift
queries/: highlights.scm
src/: scanner.c
test/corpus/: test.txt
